<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">


        <TextView
            android:id="@+id/list_idTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/list_themeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="20sp"
            android:layout_weight="2"
            android:gravity="center"/>
        <TextView
            android:id="@+id/list_contentTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="20sp"
            android:layout_weight="4"
            android:gravity="center"/>
        <TextView
            android:id="@+id/list_dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_weight="2"
            android:gravity="center"/>

    </LinearLayout>


