<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:text="@string/nameTitleTv"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:text="@string/theme"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/themeET"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/content"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/contentET"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/chooseDateBtn"
                android:text="@string/chooseDate"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dateET"
                android:layout_weight="1"
                android:inputType="text" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/queryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/query"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/theme"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/content"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="20sp" />

    </LinearLayout>


    <ListView
        android:id="@+id/resultLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>